--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "basic-setup": "npm i express cors dotenv express-validator bcryptjs mongoose jsonwebtoken helmet memory-cache morgan compression",
     "dev": "nodemon ./src/index.js --exec babel-node",
     "build": "rimraf ./dist && babel ./src -d ./dist",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "test": "mocha --require @babel/register ./tests/*.test.js",
+    
+    "build-mocha": "rimraf ./dist && babel ./src -d ./dist/src && babel ./tests -d ./dist/tests",
+    "test-mocha": "npm run build-mocha && mocha ./dist/tests/*.test.js"
   },
   "keywords": [],
   "author": "Adrian Changalombo",
@@ -18,9 +22,26 @@
     "@babel/node": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@babel/register": "^7.16.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^8.4.1",
+    "mocha": "^9.1.3",
     "ncp": "^2.0.0",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.14.0",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
+    "mongoose": "^6.1.1",
+    "morgan": "^1.10.0"
   }
 }
