--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon ./src/index.js --exec babel-node",
     "build": "rimraf ./dist && babel ./src -d ./dist",
     "start": "node ./dist/index.js",
-    "test": "mocha --require @babel/register ./tests/*.test.js",
-    
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose --silent ./tests/*.spec.js",
+    "test-watch": "npm run test -- --watch",
+
+    "test-mocha": "mocha --require @babel/register ./tests/*.test.js",
+
     "build-mocha": "rimraf ./dist && babel ./src -d ./dist/src && babel ./tests -d ./dist/tests",
-    "test-mocha": "npm run build-mocha && mocha ./dist/tests/*.test.js"
+    "test-mocha-manual": "npm run build-mocha && mocha ./dist/tests/*.test.js"
   },
   "keywords": [],
   "author": "Adrian Changalombo",
@@ -26,10 +29,12 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "eslint": "^8.4.1",
+    "jest": "^27.4.4",
     "mocha": "^9.1.3",
     "ncp": "^2.0.0",
     "nodemon": "^2.0.15",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
