--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "api-skeleton",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "basic-setup": "npm i express cors dotenv express-validator bcryptjs mongoose jsonwebtoken helmet memory-cache morgan compression",
-    "dev": "nodemon ./src/index.js --exec babel-node",
+    "dev": "nodemon ./src/server.js --exec babel-node",
     "build": "rimraf ./dist && babel ./src -d ./dist",
-    "start": "node ./dist/index.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose --silent ./tests/*.spec.js",
+    "start": "node ./dist/server.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose --detectOpenHandles --silent ./tests/*.spec.js",
     "test-watch": "npm run test -- --watch",
 
     "test-mocha": "mocha --require @babel/register ./tests/*.test.js",
 
     "build-mocha": "rimraf ./dist && babel ./src -d ./dist/src && babel ./tests -d ./dist/tests",
-    "test-mocha-manual": "npm run build-mocha && mocha ./dist/tests/*.test.js"
+    "test-mocha-manual": "npm run build-mocha && mocha ./dist/tests/*.test.js",
+
+    "basic-setup": "npm i express cors dotenv express-validator bcryptjs mongoose jsonwebtoken helmet memory-cache morgan compression && npm i -D @babel/cli @babel/core @babel/node @babel/plugin-transform-runtime @babel/preset-env ncp nodemon rimraf"
   },
   "keywords": [],
   "author": "Adrian Changalombo",
@@ -30,7 +31,7 @@
     "chai-http": "^4.3.0",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
-    "mocha": "^9.1.3",
+    "mocha": "^8.1.3",
     "ncp": "^2.0.0",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
