--- a/package.json
+++ b/package.json
@@ -19,35 +19,5 @@
   },
   "keywords": [],
   "author": "Adrian Changalombo",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/node": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/register": "^7.16.0",
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "eslint": "^8.4.1",
-    "jest": "^27.4.4",
-    "mocha": "^8.1.3",
-    "ncp": "^2.0.0",
-    "nodemon": "^2.0.15",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.1.6"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.14.0",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "memory-cache": "^0.2.0",
-    "mongoose": "^6.1.1",
-    "morgan": "^1.10.0"
-  }
+  "license": "ISC"
 }
