[ADD]: notFoundMiddleware added

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-mocha": "rimraf ./dist && babel ./src -d ./dist/src && babel ./tests -d ./dist/tests",
     "test-mocha-manual": "npm run build-mocha && mocha ./dist/tests/*.test.js",
 
-    "basic-setup": "npm i express cors dotenv express-validator bcryptjs mongoose jsonwebtoken helmet memory-cache morgan compression && npm i -D @babel/cli @babel/core @babel/node @babel/plugin-transform-runtime @babel/preset-env ncp nodemon rimraf"
+    "basic-setup": "npm i express cors dotenv express-validator bcryptjs mongoose jsonwebtoken helmet memory-cache morgan compression && npm i -D @babel/cli @babel/core @babel/node @babel/plugin-transform-runtime @babel/preset-env eslint ncp nodemon rimraf"
   },
   "keywords": [],
   "author": "Adrian Changalombo",
